--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,64 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.new-note {
+  margin-top: 75px;
+  display: flex;
+  align-items: flex-end;
+  textarea {
+    font-size: 1.4rem;
+  }
+}
+
+.new-note-btns {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  input, button {
+    width: 100%;
+    height: 35px;
+  }
+  input {
+    margin-bottom: 10px;
+  }
+  button {
+    margin-bottom: 4px;
+  }
+}
+
+.notes {
+  margin-top: 50px;
+  width: 55%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+ & > div { 
+  margin-bottom: 40px;
+  width: 300px;
+  height: 150px;
+  position: relative;
+  border: 1px solid #000;
+  border-top: 5px solid #444;
+  border-radius: 8px;
+ }
+  p {
+    margin-top: 30px;
+    margin-left: 25px;
+  }
+  i {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    cursor: pointer;
+  }
 }
